update: more heroku config.

--- a/html/index.html
+++ b/html/index.html
@@ -57,9 +57,13 @@
               <div id="logo-container">
                 <a href="#"><img src="../src/assets/images/logo-cbwt.jpg" alt="CBWT Logo"/></a>
               </div>
-              <div class="mobile-nav-btn"><img src="../src/assets/images/icon-menu.png" alt="Menu Icon" /></div>
+              <div class="mobile-nav-btn">
+                <img src="../src/assets/images/icon-menu.png" alt="Menu Icon" />
+              </div>
               <nav class="nav-bar--nav hidden">
-                <div class="nav-bar--close close"><img src="../src/assets/images/icon-close.png" /></div>
+                <div class="nav-bar--close close">
+                  <img src="../src/assets/images/icon-close.png" />
+                </div>
                 <ul>
                   <li>
                     <a class="nav-link" href="#about">About CBWT</a>
@@ -286,17 +290,38 @@
           <div class="section-content">
             <h2 id="mailing-list">Join Our Mailing List</h2>
             <form id="signup-form" method="post" action="">
-              <div id="signup-form--overlay" class="hidden"><h6 class="overlay-text"></h6></div>
+              <div id="signup-form--overlay" class="hidden">
+                <h6 class="overlay-text">
+                </h6>
+              </div>
 
               <h5>Tell us about yourself</h5>
 
               <label for="name" style="display:none">Enter your full name</label>
-              <input id="signup-form--name" name="name" type="text" placeholder="Your Name" required />
+              <input
+                id="signup-form--name"
+                name="name"
+                type="text"
+                placeholder="Your Name"
+                required
+              />
 
               <label for="email" style="display:none">Enter your email</label>
-              <input id="signup-form--email" name="email" type="email" placeholder="Your Email" required />
+              <input
+                id="signup-form--email"
+                name="email"
+                type="email"
+                placeholder="Your Email"
+                required
+              />
 
-              <input id="signup-form--dummy" width="0" height="0" name="signup-form--dummy" style="display:none" />
+              <input
+                id="signup-form--dummy"
+                width="0"
+                height="0"
+                name="signup-form--dummy"
+                style="display:none"
+              />
 
               <input id="signup-form--submit" type="button" value="Get Updates" />
             </form>
