update: use manual date enty for dates since the logic is now more complex. remove: form in favor of links for now.

--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
                   </li>
                 </ul>
               </nav>
-              <h5 class="trip-date">Trip Date: <span class="date"></span></h5>
+              <h5 class="trip-date">Trip Date: <span class="date">Jul 30 - Aug 2</span></h5>
               <h5 class="day-counter"><span class="days"></span></h5>
             </header>
           </div>
@@ -115,7 +115,7 @@
             <p>
               Every year during the first weekend in August. The trip is centered around the Garlic
               Festival at Fox Run Vineyards, so the dates always change. The trip usually runs from
-              a Thursday to Monday but the important day is Saturday, the wine tasting and biking
+              a Thursday to Sunday but the important day is Saturday, the wine tasting and biking
               day
             </p>
             <h5>Where is it?</h5>
@@ -289,7 +289,9 @@
           <!-- Mailing List -->
           <div class="section-content">
             <h2 id="mailing-list">Join Our Mailing List</h2>
-            <form id="signup-form" method="post" action="">
+            <p>Write us an <a href="mailto:a.nomadic.collective@gmail.com">email</a> or call/text
+              <a href="tel:1-716-968-2298">1-716-968-2298</a> and give us your name and contact info</p>
+            <!-- <form id="signup-form" method="post" action="">
               <div id="signup-form--overlay" class="hidden">
                 <h6 class="overlay-text">
                 </h6>
@@ -324,7 +326,7 @@
               />
 
               <input id="signup-form--submit" type="button" value="Get Updates" />
-            </form>
+            </form> -->
           </div>
         </div>
       </section>
